# Saturn

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile
Application/: CMakeLists.txt
Application/assets/shaders/: sprites.frag  sprites.vert
Application/source/: Main.cpp
Application/source/Application/: MyApplication.cpp  MyApplication.hpp
Core/: CMakeLists.txt
Core/include/: Saturn.hpp
Core/include/Common/: Timestep.hpp  Types.hpp
Core/include/Core/: Application.hpp  Context.hpp  Entry.hpp  EntryPoint.hpp  Framework.hpp  GLFWManager.hpp  Layer.hpp  LayerStack.hpp  Logger.hpp  Timestep.hpp  Types.hpp  Window.hpp
Core/include/Core/Content/: ContentManager.hpp  ContentType.hpp  DeferredContent.hpp  ShaderContent.hpp
Core/include/Core/Exception/: Exception.hpp
Core/include/Core/IO/: File.hpp
Core/include/Core/LayerSystem/: Layer.hpp  LayerStack.hpp
Core/include/Core/Rendering/: BasicVertex.hpp  GraphicsResource.hpp  LockableResource.hpp  Renderer.hpp  Shader.hpp  Texture.hpp  TextureData.hpp  VertexArray.hpp  VertexAttribute.hpp  VertexAttributeLayout.hpp
Core/include/Core/Rendering/Buffer/: BufferUsagePattern.hpp  ElementBuffer.hpp  IndexBuffer.hpp  VertexBuffer.hpp
Core/include/Core/Rendering/Shader/: GenericUniform.hpp  Shader.hpp  Uniform.hpp
Core/include/Core/Rendering/Utils/: GLTypeHelper.hpp
Core/include/Core/Resource/: Resource.hpp  ResourceLocation.hpp  ResourceManager.hpp  ResourceState.hpp  ResourceUnloader.hpp  Shader.hpp  ShaderResource.hpp  TextureResource.hpp
Core/include/IO/: File.hpp  Logger.hpp
Core/include/IO/Stream/: Buffer.hpp
Core/include/Utils/: UUIDGenerator.hpp
Core/source/: Saturn.cpp  pch.hpp
Core/source/Core/: Application.cpp  Context.cpp  Framework.cpp  GLFWManager.cpp  Layer.cpp  LayerStack.cpp  Logger.cpp  Window.cpp
Core/source/Core/Content/: ContentManager.cpp  DeferredContent.cpp  ShaderContent.cpp
Core/source/Core/Exception/: Exception.cpp
Core/source/Core/IO/: File.cpp
Core/source/Core/LayerSystem/: Layer.cpp  LayerStack.cpp
Core/source/Core/Rendering/: Renderer.cpp  Shader.cpp  Texture.cpp  TextureData.cpp  VertexArray.cpp  VertexAttributeLayout.cpp
Core/source/Core/Rendering/Buffer/: IndexBuffer.cpp  VertexBuffer.cpp
Core/source/Core/Rendering/Shader/: Shader.cpp  Uniform.cpp
Core/source/Core/Resource/: Resource.cpp  ResourceLocation.cpp  ResourceManager.cpp  ResourceUnloader.cpp  Shader.cpp  ShaderResource.cpp  TextureResource.cpp
Core/source/IO/: File.cpp  Logger.cpp
Core/source/IO/Stream/: Buffer.cpp
Core/source/Utils/: UUIDGenerator.cpp
